--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
